<resources>
    <string name="app_name">My Lunch Time</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="keep_connected">Keep Connected</string>
    <string name="txt_register">Register Here</string>
    <string name="txt_dont_have">Do not have an account?</string>
    <string name="txt_user">User</string>
    <string name="txt_register_btn">Register</string>
    <string name="fill_name">Fill the name</string>
    <string name="facebook_app_id" translatable="false">113191026026994</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb113191026026994</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_favorites">Favorites</string>
    <string name="txt_new_favorite">New Favorite</string>
    <string name="txt_locations">Locations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_favorite">New Favorite</string>
    <string name="txt_name">Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="txt_phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="txt_Save">Save</string>
    <string name="txt_delete">Delete</string>

    <string name="txt_edit">Edit</string>
    <string name="maps_key_webservice" translatable="false">AIzaSyDugKkbaVw68SpFgH0B-6KJZlgwmPsiTKk</string>
    <string name="maps_key_android" translatable="false">AIzaSyDYBlWLTTlQW2Od1kEe9XpgcyozquBP7Bs</string>
    <string name="no_data_available">No favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txt_call">CALL</string>
    <string name="txt_welcome">Find all your favorites Lunch Places Here</string>
    <string name="txt_about">About</string>
    <string name="txt_version">Version Code:</string>
    <string name="developed_by">Developed By: Douglas Araujo</string>
    <string name="fill_phone">Fill the phone</string>
    <string name="fill_postal">Fill the address</string>
    <string name="maps_key" translatable="false">AIzaSyDHCf2HyStY1Mllc4zUZMA-7u16Ji-7JWU</string>
    <string name="txt_share">Share</string>
    <string name="txt_address">Address</string>
    <string name="txt_added">Favorite added with success</string>
    <string name="txt_update">Favorite updated</string>
    <string name="txt_delete_favorite">Favorite removed</string>
    <string name="txt_maps_url" translatable="false">https://maps.googleapis.com/</string>
    <string name="txt_wait">Wait...</string>
    <string name="txt_sure">Are you sure, you want to delete?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_favorite">Favorite of today: </string>
    <string name="txt_phone_number">Phone Number: </string>
    <string name="maps_url" translatable="false">http://maps.google.com/maps?saddr=</string>
    <string name="txt_not_registed">User not registed</string>
</resources>
