<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navList"
            android:icon="@drawable/list"
            android:title="@string/txt_favorites" />
        <item
            android:id="@+id/navNew"
            android:icon="@drawable/add_new"
            android:title="@string/txt_new_favorite" />
        <item
            android:id="@+id/navMap"
            android:icon="@drawable/maps"
            android:title="@string/txt_locations" />
        <item
            android:id="@+id/navAbout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/txt_about" />
    </group>


    <item android:title="@string/txt_logout">
        <menu>
            <item
                android:id="@+id/navLogOut"
                android:icon="@drawable/logout"
                android:title="@string/txt_logout" />
        </menu>
    </item>

</menu>
