<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_padrao"
    tools:context="app.dougaraujo.com.mylunchtime.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLogin"
        style="@style/tilStyle">

        <EditText
            android:id="@+id/etLogin"
            style="@style/etStyle"
            android:hint="@string/login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPass"
        style="@style/tilStyle">

        <EditText
            android:id="@+id/etSenha"
            style="@style/etStyle"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logar"
        android:text="@string/login" />

    <CheckBox
        android:id="@+id/cbKeep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_padrao"
        android:text="@string/keep_connected" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_dont_have" />

    <TextView
        style="@style/clickableElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/txt_register" />
</LinearLayout>
