<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.dougaraujo.com.mylunchtime.NewFavoriteFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_padrao"
            android:text="@string/new_favorite"
            android:textSize="@dimen/dimen_title" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            style="@style/tilStyle"
            android:padding="@dimen/padding_padrao">

            <EditText
                android:id="@+id/etName"
                style="@style/etStyle"
                android:hint="@string/txt_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPostalCode"
            style="@style/tilStyle"
            android:padding="@dimen/padding_padrao">

            <EditText
                android:id="@+id/etPostalCode"
                style="@style/etStyle"
                android:hint="@string/postal_code" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddress"
            style="@style/tilStyle"
            android:padding="@dimen/padding_padrao">

            <EditText
                android:id="@+id/etAddress"
                style="@style/etStyle"
                android:hint="@string/address"
                android:inputType="none|text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            style="@style/tilStyle"
            android:padding="@dimen/padding_padrao">

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/etStyle"
                android:hint="@string/txt_phone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/botao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveNew"
            android:text="@string/txt_Save" />
    </LinearLayout>


</FrameLayout>
