<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_padrao"
    tools:context="app.dougaraujo.com.mylunchtime.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNewLogin"
        style="@style/tilStyle">

        <EditText
            android:id="@+id/etNewLogin"
            style="@style/etStyle"
            android:hint="@string/txt_user" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNewPass"
        style="@style/tilStyle">

        <EditText
            android:id="@+id/etNewSenha"
            style="@style/etStyle"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        style="@style/botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/txt_register_btn" />
</LinearLayout>
